# aoc-2024-py

./: .gitignore  README.md  pyproject.toml
src/aoc2024/: __init__.py  __main__.py
src/aoc2024/inputs/: __init__.py
src/aoc2024/solutions/: day01a.py  day01b.py  day02a.py  day02b.py  day03a.py  day03b.py  day04a.py  day04b.py  day05a.py  day05b.py  day06a.py  day06b.py  day07a.py  day07b.py  day08a.py  day08b.py  day09a.py  day09b.py  day10a.py  day10b.py  day11a.py  day11b.py  day12a.py  day12b.py  day13a.py  day13b.py  day14a.py  day14b.py  day15a.py  day15b.py  day16a.py  day16b.py  day17a.py  day17b.py  day18a.py  day18b.py  day19a.py  day19b.py  day20a.py  day20b.py  (+11 more)
src/aoc2024/test/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day20.py  test_day21.py  test_day22.py  test_day23.py  test_day24.py  test_day25.py
src/aoc2024/util/: parsing.py
