[project]
name = "aoc2024"
version = "0.12.2"
description = "Advent of Code 2024 in Python"
readme = "README.md"
authors = [
    { email = "trapsnegel@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.4",
    "shapely>=2.0.6",
]

[project.scripts]
aoc2024 = "aoc2024:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
