[project]
name = "aoc2024"
version = "0.17.1"
description = "Advent of Code 2024 in Python"
readme = "README.md"
authors = [
    { email = "trapsnegel@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.1",
    "pytest>=8.3.4",
    "shapely>=2.0.6",
    "sympy>=1.13.3",
]

[project.scripts]
aoc2024 = "aoc2024:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
